--- a/project.config.json
+++ b/project.config.json
@@ -43,13 +43,29 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
-		"miniprogram": {
+		"gamePlugin": {
 			"current": -1,
 			"list": []
+		},
+		"miniprogram": {
+			"current": -1,
+			"list": [
+				{
+					"id": 0,
+					"name": "pages/reqDetail/reqDetail",
+					"pathName": "pages/reqDetail/reqDetail",
+					"query": "id=a645db19f320428e9f9aaa45350d864c",
+					"scene": null
+				}
+			]
 		}
 	}
 }
